# plan-html

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  eslint.config.js  package-lock.json  package.json  playwright.config.js  pyproject.toml  serve_plan.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
scripts/: build.js  lint-deck.js  sync-from-source.sh
skills/plan-html/: SKILL.md
src/: cards.js  dom.js  live.js  main.js  md.js  payload.js  sections.js  state.js
templates/: deck.html
tests/: conftest.py  test_http_e2e.py  test_unit.py
tests/e2e/: deck.spec.js  fixtures.js
tests/js/: md.test.js  payload.test.js  state.test.js
